# jason-pcc

./: .clang-format  .gitignore  .style.yapf  CMakeLists.txt  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml  requirements.txt
app/: CMakeLists.txt
app/JPCCAppAnalyzer/: Analyzer.cpp  Analyzer.h  AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppAnalyzer.cpp  VoxelIntensityEntropyToVoxelCount.cpp  VoxelIntensityEntropyToVoxelCount.h  VoxelIntensitySTDToVoxelCount.cpp  VoxelIntensitySTDToVoxelCount.h  VoxelOccludedPercentageToVoxelCount.cpp  VoxelOccludedPercentageToVoxelCount.h  VoxelOccupancyChangeCountToVoxelCount.cpp  VoxelOccupancyChangeCountToVoxelCount.h  VoxelOccupancyCountToVoxelCount.cpp  VoxelOccupancyCountToVoxelCount.h  VoxelOccupancyIntervalEntropyToVoxelCount.cpp  VoxelOccupancyIntervalEntropyToVoxelCount.h  VoxelOccupancyIntervalSTDToVoxelCount.cpp  VoxelOccupancyIntervalSTDToVoxelCount.h  VoxelPointCountToVoxelCount.cpp  VoxelPointCountToVoxelCount.h  VoxelPointNormalAngleEntropyToVoxelCount.cpp  VoxelPointNormalAngleEntropyToVoxelCount.h  VoxelPointNormalAngleSTDToVoxelCount.cpp  VoxelPointNormalAngleSTDToVoxelCount.h  VoxelPointNormalSTDToVoxelCount.cpp  VoxelPointNormalSTDToVoxelCount.h  VoxelReflectivitySTDToVoxelCount.cpp  VoxelReflectivitySTDToVoxelCount.h
app/JPCCAppAnalyzer/analyzer/: Analyzer.cpp  Analyzer.h  VoxelIntensityEntropyToVoxelCount.cpp  VoxelIntensityEntropyToVoxelCount.h  VoxelIntensitySTDToVoxelCount.cpp  VoxelIntensitySTDToVoxelCount.h  VoxelOccludedPercentageToVoxelCount.cpp  VoxelOccludedPercentageToVoxelCount.h  VoxelOccupancyChangeCountToVoxelCount.cpp  VoxelOccupancyChangeCountToVoxelCount.h  VoxelOccupancyCountToVoxelCount.cpp  VoxelOccupancyCountToVoxelCount.h  VoxelOccupancyIntervalEntropyToVoxelCount.cpp  VoxelOccupancyIntervalEntropyToVoxelCount.h  VoxelOccupancyIntervalSTDToVoxelCount.cpp  VoxelOccupancyIntervalSTDToVoxelCount.h  VoxelPointCountToVoxelCount.cpp  VoxelPointCountToVoxelCount.h  VoxelPointNormalAngleEntropyToVoxelCount.cpp  VoxelPointNormalAngleEntropyToVoxelCount.h  VoxelPointNormalAngleSTDToVoxelCount.cpp  VoxelPointNormalAngleSTDToVoxelCount.h
app/JPCCAppAscii2Binary/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppAscii2Binary.cpp
app/JPCCAppBackgroundGenerator/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppBackgroundGenerator.cpp
app/JPCCAppDatasetParser/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppDatasetParser.cpp
app/JPCCAppDatasetPreprocess/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppDatasetPreprocess.cpp
app/JPCCAppDatasetQuantizer/: AppParameter.cpp  AppParameter.h  JPCCAppDatasetQuantizer.cpp
app/JPCCAppDatasetRegistrationTool/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppDatasetRegistrationTool.cpp
app/JPCCAppDatasetViewer/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppDatasetViewer.cpp
app/JPCCAppEncodeDecode/: JPCCAppEncodeDecode.cpp
app/JPCCAppEncoder/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppEncoder.cpp
app/JPCCAppGroundSegmentation/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppGroundSegmentation.cpp
app/JPCCAppMetric/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppMetric.cpp
app/JPCCAppSegmentation/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppSegmentation.cpp
app/JPCCAppSingleDatasetRegistration/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCAppSingleDatasetRegistration.cpp
app/JPCCTest/: AppParameter.cpp  AppParameter.h  CMakeLists.txt  JPCCTest.cpp
libs/: CMakeLists.txt
libs/JPCCCommon/: CMakeLists.txt
libs/JPCCCommon/src/: Frame.cpp  GroupOfFrame.cpp  Parameter.cpp  ParameterParser.cpp  ParserParameter.cpp  Transform.cpp
libs/JPCCIO/: CMakeLists.txt
libs/JPCCIO/src/: DatasetParameter.cpp  DatasetReader.cpp  PcapReader.cpp  PcapReaderParameter.cpp
libs/PCCCommon/: CMakeLists.txt
libs/PCCCommon/include/: PCCMemory.h
libs/coder/src/: CoderBackendType.cpp  JPCCDecoderParameter.cpp  JPCCDecoderTMC3Parameter.cpp  JPCCEncoderParameter.cpp  JPCCEncoderTMC3Parameter.cpp
libs/combination/: CMakeLists.txt
libs/combination/src/: JPCCCombination.cpp
libs/common/: CMakeLists.txt
libs/common/src/: CoderBackendType.cpp  Common.cpp  Frame.cpp  GroupOfFrame.cpp  JPCCCoderContext.cpp  JPCCContext.cpp  JPCCHeader.cpp  JPCCMemory.cpp  JPCCPointSet3.cpp  Parameter.cpp  ParameterOStream.cpp  ParameterParser.cpp  ParserParameter.cpp  ScopeStopwatch.cpp  SegmentationOutputType.cpp  SegmentationType.cpp
libs/decoder/: CMakeLists.txt
libs/decoder/decoder_tmc2/: CMakeLists.txt
libs/decoder/decoder_tmc3/: CMakeLists.txt
libs/decoder/src/: JPCCDecoder.cpp  JPCCDecoderAdapter.cpp  JPCCDecoderNone.cpp  JPCCDecoderTMC3.cpp
libs/encod/: CMakeLists.txt
libs/encoder/: CMakeLists.txt
libs/encoder/encoder_common/: CMakeLists.txt
libs/encoder/encoder_tmc2/: CMakeLists.txt
libs/encoder/encoder_tmc3/: CMakeLists.txt
libs/encoder/src/: JPCCEncoder.cpp  JPCCEncoderAdapter.cpp  JPCCEncoderNone.cpp  JPCCEncoderParameter.cpp  JPCCEncoderTMC3.cpp  JPCCEncoderTMC3Parameter.cpp
libs/io/: CMakeLists.txt
libs/io/src/: DatasetParameter.cpp  DatasetReader.cpp  DatasetReaderBase.cpp  DatasetReaderParameter.cpp  DatasetStreamReader.cpp  LvxReader.cpp  LvxReaderParameter.cpp  Pcap.cpp  PcapReader.cpp  PcapReaderParameter.cpp  PlyIO.cpp  PlyReader.cpp  Reader.cpp  ReaderParameter.cpp  ReaderParameterBase.cpp
libs/lvx_common/: CMakeLists.txt
libs/lvx_common/include/: lds.h  livox_def.h  lvx_file.h
libs/lvx_common/src/: lds.cpp  lvx_file.cpp
libs/math/: CMakeLists.txt
libs/math/src/: Cluster.cpp  GMM.cpp  KMeans.cpp  Kmeans.cpp
libs/metric/: CMakeLists.txt
libs/metric/src/: JPCCMetric.cpp  JPCCMetricParameter.cpp
libs/octree/: CMakeLists.txt
libs/pcc_common/: CMakeLists.txt
libs/process/: CMakeLists.txt
libs/segmentation/: CMakeLists.txt
libs/visualization/: CMakeLists.txt
tests/: CMakeLists.txt
tests/octree/: OctreeNBufBaseTest.cpp  OctreeNBufBranchNodeTest.cpp
(+716 files in other folders)
