add_subdirectory(JPCCAppAnalyzer)
add_subdirectory(JPCCAppBackgroundGenerator)
add_subdirectory(JPCCAppDatasetParser)
add_subdirectory(JPCCAppDatasetRegistrationTool)
add_subdirectory(JPCCAppDatasetViewer)
add_subdirectory(JPCCAppGroundSegmentation)
add_subdirectory(JPCCAppSegmentation)
add_subdirectory(JPCCTest)