add_subdirectory(JPCCAppAnalyzer)
add_subdirectory(JPCCAppDatasetParser)
add_subdirectory(JPCCAppDatasetRegistrationTool)
add_subdirectory(JPCCAppDatasetViewer)
add_subdirectory(JPCCAppEncodeDecode)
add_subdirectory(JPCCAppEncoder)
add_subdirectory(JPCCAppGroundSegmentation)
add_subdirectory(JPCCAppSegmentation)
