add_subdirectory(JPCCAppAnalyzer)
add_subdirectory(JPCCAppDatasetParser)
add_subdirectory(JPCCAppDatasetPreprocess)
add_subdirectory(JPCCAppSegmentation)
add_subdirectory(JPCCAppAscii2Binary)
add_subdirectory(JPCCAppDatasetQuantizer)
add_subdirectory(JPCCAppDatasetRegistrationTool)
add_subdirectory(JPCCAppDatasetViewer)
add_subdirectory(JPCCAppEncoder)
add_subdirectory(JPCCAppMetric)
add_subdirectory(JPCCAppGroundSegmentation)
