add_subdirectory(common)
add_subdirectory(io)
add_subdirectory(lvx_common)
add_subdirectory(math)
add_subdirectory(metric)
add_subdirectory(octree)
add_subdirectory(process)
add_subdirectory(segmentation)
add_subdirectory(combination)
add_subdirectory(encoder)
add_subdirectory(decoder)
add_subdirectory(visualization)
