CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

GET_FILENAME_COMPONENT(MYNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
STRING(REPLACE " " "_" MYNAME ${MYNAME})
SET(MYNAME ${MYNAME}${CMAKE_DEBUG_POSTFIX})
PROJECT(${MYNAME} C CXX)

FILE(GLOB SRC *.h *.cpp *.c)

INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS} ${VC_INCLUDE_DIR} ${PCCCOMMON_INCLUDE_DIR} ${JPCCCOMMON_INCLUDE_DIR} ${JPCCIO_INCLUDE_DIR})

LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})

ADD_DEFINITIONS(${PCL_DEFINITIONS})
                     
ADD_EXECUTABLE(${MYNAME} ${SRC})

SET(LIBS ${PCL_LIBRARIES} ${VC_LIBRARIES} PCCCommon JPCCCommon JPCCIO)

TARGET_LINK_LIBRARIES(${MYNAME} ${LIBS})

INSTALL(TARGETS ${MYNAME} DESTINATION bin)