CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

GET_FILENAME_COMPONENT(MYNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
STRING(REPLACE " " "_" MYNAME ${MYNAME})
SET(MYNAME ${MYNAME}${CMAKE_DEBUG_POSTFIX})
PROJECT(${MYNAME} C CXX)

FILE(GLOB SRC *.h *.cpp *.c)

INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${PCCCOMMON_INCLUDE_DIR} ${JPCCCOMMON_INCLUDE_DIR} ${JPCCIO_INCLUDE_DIR})

LINK_DIRECTORIES(${VTK_LIBRARY_DIRS} ${PCL_LIBRARY_DIRS})

ADD_DEFINITIONS(${PCL_DEFINITIONS})
                     
ADD_EXECUTABLE(${MYNAME} ${SRC})

SET(LIBS ${PCL_LIBRARIES} PCCCommon JPCCCommon JPCCIO)

TARGET_LINK_LIBRARIES(${MYNAME} ${LIBS})

IF(NOT WIN32)
    TARGET_LINK_LIBRARIES(${MYNAME} pthread)
ENDIF(NOT WIN32)

INSTALL(TARGETS ${MYNAME} DESTINATION bin)