CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

GET_FILENAME_COMPONENT(MYNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
STRING(REPLACE " " "_" MYNAME ${MYNAME})
PROJECT(${MYNAME} C CXX)

FILE(GLOB PROJECT_INCLUDE_FILES include/*.h include/*.hpp)
FILE(GLOB PROJECT_SRC_FILES     src/*.cpp)

SOURCE_GROUP(include FILES ${PROJECT_INCLUDE_FILES})
SOURCE_GROUP(src     FILES ${PROJECT_SRC_FILES})

INCLUDE_DIRECTORIES(include)
 
ADD_LIBRARY(${MYNAME} ${PROJECT_INCLUDE_FILES} ${PROJECT_SRC_FILES})

TARGET_LINK_LIBRARIES(${MYNAME})

SET_TARGET_PROPERTIES(${MYNAME} PROPERTIES LINKER_LANGUAGE CXX)

STRING(TOUPPER ${MYNAME} MYNAME_UPPER)

SET(${MYNAME_UPPER}_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
