CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

GET_FILENAME_COMPONENT(MYNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
STRING(REPLACE " " "_" MYNAME ${MYNAME})
PROJECT(${MYNAME} C CXX)

IF(NOT WIN32)
    INCLUDE(CheckSymbolExists)
    CHECK_SYMBOL_EXISTS(getrusage sys/resource.h HAVE_GETRUSAGE)
    
    IF(NOT HAVE_GETRUSAGE)
        MESSAGE(FATAL_ERROR "getrusage not found")
    ENDIF(NOT HAVE_GETRUSAGE)
    ADD_DEFINITIONS(-DHAVE_GETRUSAGE)
    INCLUDE(FindTBB)
    IF(NOT TBB_FOUND)
        MESSAGE(FATAL_ERROR "TBB not found")
    ENDIF(NOT TBB_FOUND)
ENDIF(NOT WIN32)

FILE(GLOB PROJECT_INCLUDE_FILES include/*.h include/*.hpp)
FILE(GLOB PROJECT_SRC_FILES     src/*.cpp)

SOURCE_GROUP(include FILES ${PROJECT_INCLUDE_FILES})
SOURCE_GROUP(src     FILES ${PROJECT_SRC_FILES})

INCLUDE_DIRECTORIES(include)

IF(NOT WIN32)
    INCLUDE_DIRECTORIES(${TBB_INCLUDE_DIRS})
ENDIF(NOT WIN32)
 
ADD_LIBRARY(${MYNAME} ${PROJECT_INCLUDE_FILES} ${PROJECT_SRC_FILES})

IF(NOT WIN32)
    TARGET_LINK_LIBRARIES(${MYNAME} TBB::tbb)
ENDIF(NOT WIN32)

SET_TARGET_PROPERTIES(${MYNAME} PROPERTIES LINKER_LANGUAGE CXX)

STRING(TOUPPER ${MYNAME} MYNAME_UPPER)

SET(${MYNAME_UPPER}_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
